5.Services.Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mjbright-ingress

  namespace: default
spec:

  ingressClassName: "nginx"

  rules:

  - host: quiz.mjbright.click
    http:
      paths:
      - backend:
          service:
            name: quiz
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific

  - host: quiz.mjbright.click
    http:
      paths:
      - backend:
          service:
            name: vote
            port:
              number: 80
        path: /vote
        pathType: ImplementationSpecific

  - host: vote.mjbright.click
    http:
      paths:
      - backend:
          service:
            name: vote
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific

  - host: web.mjbright.click
    http:
      paths:
      - backend:
          service:
            #name: web
            name: web
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
